# Extra_lab_unicode

./: .gitignore  CMakeLists.txt  README.md  config.json  config_task2.json  create_tests.py  main.cpp  results.txt  run_tests.py  utf8_ops.cpp
configs/: config.json  config_task1.json  config_task3.json
files/: task1_test_UTF-32_big.txt  task1_test_UTF-32_small.txt  task1_test_UTF-32_small2.txt  task1_test_UTF16_big.txt  task_test_UTF-16_BE_big.txt  task_test_UTF-16_BE_big_without_BOM.txt  task_test_UTF-16_BE_small.txt  task_test_UTF-16_BE_small_without_BOM.txt  task_test_UTF-16_big.txt  task_test_UTF-16_small2.txt  task_test_UTF-32_BE_big.txt  task_test_UTF-32_BE_big_without_BOM.txt  task_test_UTF-32_BE_small.txt  task_test_UTF-32_BE_small2_without_BOM.txt  task_test_UTF-32_small1.txt  task_test_UTF-8_big.txt  task_test_UTF-8_small1.txt  task_test_UTF-8_small2.txt  task_test_UTF-8_small3.txt
files_with_errors/: task_test_UTF-16_BE_error_big.txt  task_test_UTF-16_error_small1.txt  task_test_UTF-16_error_small2.txt  task_test_UTF-16_error_small3.txt  task_test_UTF-32_BE_error_big.txt  task_test_UTF-32_error_small2.txt  task_test_UTF-32_error_small3.txt  task_test_UTF-8_error_small1.txt  task_test_UTF-8_error_small2.txt
inc/: configuration.hpp  count_code_points.hpp  count_code_units.hpp  count_incorrect_bytes.hpp  process_config.hpp  utils.hpp
results/: expected_results_task1.json  expected_results_task2.json  expected_results_task3.txt  results_task1.txt  results_task2.txt
src/: count_code_points.cpp  count_code_units.cpp  count_incorrect_bytes.cpp  utils.cpp  (+1 more)
